# rust_server_manga

./: .env  Cargo.toml  Rocket.toml
migrations/2021-05-08-221801_create_users/: up.sql
migrations/2021-05-17-030321_create_fandom/: down.sql  up.sql
migrations/2021-05-17-030624_add_admin_to_user/: up.sql
migrations/2021-05-20-004123_create_users_from_fandom/: down.sql  up.sql
migrations/2021-05-22-182555_add_admin_to_fandom/: down.sql  up.sql
migrations/2021-05-23-040534_create_manga_table/: down.sql  up.sql
migrations/2021-05-30-235125_add_photo_to_user/: down.sql  up.sql
migrations/2021-05-31-010808_add_photo_to_fandom/: down.sql  up.sql
migrations/2021-05-31-013504_add_photo_to_manga/: down.sql  up.sql
migrations/2021-05-31-014752_create_chapters/: down.sql  up.sql
src/: cors.rs  eventbus.rs  main.rs  schema.rs
src/catchers/: bad_request.rs  error_payload.rs  mod.rs  unauthorized.rs  unprocessable_entity.rs
src/domain/: mod.rs
src/domain/entities/: chapter.rs  fandom.rs  image_uuid.rs  login.rs  manga.rs  mod.rs  token.rs  user.rs  user_from_fandom.rs
src/domain/repository/: mod.rs  redis_repository.rs  s3_repository.rs
src/domain/usecases/: mod.rs
src/errors/: create_manga_error.rs  create_user_error.rs  image_upload_error.rs  login_error.rs  mod.rs  unauthrozied_error.rs
src/guards/: auth_guard.rs  fandom_admin_guard.rs  fandom_guard.rs  is_admin_guard.rs  mod.rs
src/hooks/: mod.rs  receive_delete_image.rs  receive_remove_image_cache.rs  receive_upload_image.rs
src/routes/: mod.rs  multipart.rs
src/test/: mod.rs
(+51 files in other folders)
